2020.2/html/_sources/shells.rst.txt
Supported Shells
===================

+-------------------------------------+-------------------------+
| Shell                               | Software Version        |
+=====================================+=========================+
| Xilinx Alveo U250                   | Vitis 2020.1            |
+-------------------------------------+-------------------------+
| Xilinx Alveo U200                   | Vitis 2020.1            |
+-------------------------------------+-------------------------+
| Xilinx Alveo U50                    | Vitis 2020.1            |
+-------------------------------------+-------------------------+
| Xilinx U280 HBM                     | Vitis 2020.1            |
+-------------------------------------+-------------------------+
| Xilinx Zynq UltraScale+ MPSoC ZCU102| Vitis 2020.1            |
+-------------------------------------+-------------------------+
| Xilinx Zynq UltraScale+ MPSoC ZCU104| Vitis 2020.1            |
+-------------------------------------+-------------------------+
| Xilinx Zynq-7000 SoC ZCU702         | Vitis 2020.1            |
+-------------------------------------+-------------------------+
| Xilinx Zynq-7000 SoC ZCU706         | Vitis 2020.1            |
+-------------------------------------+-------------------------+
