2021.2/html/_sources/shells.rst.txt
Supported Shells
===================

+-------------------------------------+-------------------------+
| Shell                               | Software Version        |
+=====================================+=========================+
| Xilinx Alveo U250                   | Vitis 2021.2            |
+-------------------------------------+-------------------------+
| Xilinx Alveo U200                   | Vitis 2021.2            |
+-------------------------------------+-------------------------+
| Xilinx Alveo U50                    | Vitis 2021.2            |
+-------------------------------------+-------------------------+
| Xilinx Alveo U280                   | Vitis 2021.2            |
+-------------------------------------+-------------------------+
| Xilinx Zynq UltraScale+ MPSoC ZCU102| Vitis 2021.2            |
+-------------------------------------+-------------------------+
| Xilinx Zynq UltraScale+ MPSoC ZCU104| Vitis 2021.2            |
+-------------------------------------+-------------------------+
| Xilinx Zynq-7000 SoC ZC706          | Vitis 2021.2            |
+-------------------------------------+-------------------------+
| Xilinx Versal VCK190                | Vitis 2021.2            |
+-------------------------------------+-------------------------+

For Embedded Platforms, please download and use the pre-built image from `here <https://www.xilinx.com/support/download/index.html/content/xilinx/en/downloadNav/embedded-platforms.html>`__.
